fixed choices.js overflow and position issue

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -232,6 +232,7 @@ const toggleAdvancedSearch = () => {
 choices = new Choices(choicesSelect,{
         addItems: false,
         allowHTML: true,
+        position: 'bottom',
         placeholder: 'Select an option',
       })
 
