new db data, causes TypeErroe in groupBy

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -187,7 +187,7 @@ fetch("../assets/lunr/search.json").then(
         
 //listen for search_bar
 let options = {
-      valueNames: ['title', 'authors_display', 'year', 'greg_full' ],
+      valueNames: ['title', 'authors_display', 'year_int', 'greg_full' ],
       
       // Since there are no elements in the list, this will be used as template.
       item: function(values) { 
