style of expand

--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -1331,3 +1331,10 @@ section {
 
 
 
+/*--------------------------------------------------------------
+# Explanded result
+--------------------------------------------------------------*/
+.expand {
+  text-transform: uppercase;
+  color: #663300;
+}
